# icftsc

./: .gitignore  Makefile  README.md  TABLES.md  cli.py  pyproject.toml  shell.nix
.github/workflows/: ci.yml
notebooks/: checkpoints.py  embeddings.py  freeze.py  illustrations.py  multinerd.py  prompt.py  stats.py  t5.py
run/: bert.sh  compile.sh  dec.sh  enc.sh  encdec.sh  flant5.sh  gemma3.sh  gpt.sh  gptneox.sh  llama.sh  pythia.sh  qwen.sh  t5.sh  t5gemma2.sh  test.sh
scripts/: bert.sh  gpt.sh  run.sh  t5.sh  test.sh
slurm/: hpc.sh  nix.sh  run.sh
src/icft/: common.py  logging.py  metrics.py  models.py  types.py
src/icft/datasets/: common.py  estner.py  multinerd.py  superglue.py
src/icft/models/: gpt2.py  pt.py  t5.py
src/icft/scripts/: cli.py  common.py  fine_tune.py  predict.py  prompt_tune.py  superglue.py
src/icftsc/: constants.py  logging.py  metrics.py  modeling.py  types.py
src/icftsc/datasets/: boolq.py  common.py  estner.py  multinerd.py  obl.py  superglue.py  util.py  wic.py
src/icftsc/modeling/: causal.py  common.py  seq2seq.py  seqcls.py  util.py
src/icftsc/scripts/: cli.py  common.py  few_shot.py  fine_tune.py  prompt_tune.py  superglue.py  tracking.py
src/instruct/: logging.py  metrics.py  modeling.py  plotting.py
src/instruct/datasets/: boolq.py  estner.py  multinerd.py  (+3 more)
src/pt4sc/: constants.py  logging.py  metrics.py  models.py  types.py
tests/: conftest.py  test_bert.py  test_boolq.py  test_datasets.py  test_estner.py  test_gemma.py  test_gpt2.py  test_llama.py  test_metrics.py  test_multinerd.py  test_obl.py  test_pt_model.py  test_qwen.py  test_t5.py  test_wic.py
typesetting/: main.typ  ref.bib
(+17 files in other folders)
