[project]
name = "icftsc"
version = "0.1.0"
description = "In-Context Fine-Tuning for Sequence Classification"
readme = "README.md"
requires-python = "==3.14.3"
dependencies = [
    "flash-linear-attention==0.4.2",
    "sentencepiece==0.2.1",
    "bitsandbytes==0.49.2",
    "transformers==5.5.2",
    "scikit-learn==1.8.0",
    "accelerate==1.13.0",
    "rouge-score==0.1.2",
    "tiktoken==0.12.0",
    "datasets==4.8.4",
    "evaluate==0.4.6",
    "mlflow==3.10.1",
    "polars==1.39.3",
    "typer==0.24.1",
    "peft==0.18.1",
    "nltk==3.9.4",
]

[dependency-groups]
dev = [
    "pytest-xdist==3.8.0",
    "plotnine==0.15.3",
    "ipython==9.11.0",
    "marimo==0.23.0",
    "pytest==9.0.3",
    "ruff==0.15.10",
    "ty==0.0.29",
]

[project.optional-dependencies]
cpu = ["torch==2.11.0"]
cu128 = [
    "causal-conv1d==1.6.1",
    "flash-attn==2.8.3",
    "torch==2.11.0",
]

[project.scripts]
cli = "icftsc.scripts.cli:app"

[build-system]
requires = ["hatchling==1.29"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["A", "F", "E", "W", "I", "C4", "FA", "UP", "RUF", "SIM", "ARG"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu128" }]]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
